# assertify

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
assertify_proc_macros/: Cargo.toml  README.md
assertify_proc_macros/src/: lib.rs
src/: lib.rs
tests/: assertify.rs  testify.rs  trybuild.rs
tests/trybuild-failures/: not_binary_expression.rs  not_binary_expression.stderr  not_comparison.rs  not_comparison.stderr  testify_not_binary_expression.rs  testify_not_binary_expression.stderr
