[package]
name = "assertify"
version = "0.6.1"
authors = ["Daniel Parks <oss-assertify@demonhorse.org>"]
description = "Clearer assertions and tests for expressions"
homepage = "https://github.com/danielparks/assertify"
repository = "https://github.com/danielparks/assertify"
readme = "README.md"
keywords = ["test", "assert"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
assertify_proc_macros = { version = "0.6.1", path = "assertify_proc_macros" }

[dev-dependencies]
trybuild = "1.0"
