[package]
name = "assertify"
version = "1.0.0"
authors = ["Daniel Parks <oss-assertify@demonhorse.org>"]
description = "Clearer assertions and tests for expressions"
homepage = "https://github.com/danielparks/assertify"
repository = "https://github.com/danielparks/assertify"
readme = "README.md"
keywords = ["test", "assert"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
