[package]
name = "assertify_proc_macros"
version = "0.1.0"
authors = ["Daniel Parks <oss-assertify@demonhorse.org>"]
description = "Actual macro code for assertify. Do not use this directly."
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
