[package]
name = "assertify_proc_macros"
version = "0.7.1"
authors = ["Daniel Parks <oss-assertify@demonhorse.org>"]
description = "Deprecated: use assert2 for better assertions"
homepage = "https://github.com/danielparks/assertify"
repository = "https://github.com/danielparks/assertify"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges.maintenance]
status = "deprecated"
